k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-service
  template:
    metadata:
      labels:
        app: ai-service
    spec:
      serviceAccountName: ai-sa   # 🔥 ADD THIS
      containers:
      - name: ai-service
        image: ai-service
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
