k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-service
spec:
  type: NodePort
  selector:
    app: ai-service
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30007
